[tool.poetry]
name = "osxdocker"
version = "0.1.1"
description = "A CLI for working with docker on OSX"
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ConorSheehan1/osxdocker"
readme="README.md"
documentation="https://readthedocs.org/projects/osxdocker/"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6" # bump back down once dev-extras section is added, no conflict with black >= 3.6
fire = "^0.3.1"
termcolor = "^1.1.0"

# should be dev-extras https://github.com/python-poetry/poetry/issues/1644
[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
pytest = "*"
docker = "*"
isort = {extras = ["poetry"], version = "*"}
recommonmark = "*"
sphinx = "*"
sphinx-autobuild = "*"
taskipy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# https://github.com/python-poetry/poetry/issues/241
# dev scripts
[tool.taskipy.tasks]
dev_osxdocker = "python osxdocker/docker_logs.py"
tests = "python -m pytest tests"
ci_lint = "black --check ."
lint = "black ."
build_docs= "sphinx-autobuild docs/source docs/build/html"
isort = 'isort -y'

# cli entrypoint
[tool.poetry.scripts]
osxdocker = "osxdocker:main"
